--- a/configs/config.yml
+++ b/configs/config.yml
@@ -2,8 +2,8 @@ port: "8080"
 
 db :
   username: "postgres"
-  host: "localhost"
-  port: "5436"
+  host: "db"
+  port: "5432"
   sslmode: "disable"
 
 age_api: "https://api.agify.io/?name="
